feat: update components metadata

--- a/app/docs/accordion/page.mdx
+++ b/app/docs/accordion/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Accordion - Motion-Primitives',
   description:
-    'A vertically stacked set of collapsible containers allowing users to toggle content visibility. Customize the animation effects with variants and transitions for expanding/collapsing the sections.',
+    'A vertically stacked set of collapsible containers allowing users to toggle content visibility. Customize the animation effects with variants and transitions for expanding/collapsing the sections. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { AccordionBasic } from './accordion-basic';
