--- a/app/docs/animated-background/page.mdx
+++ b/app/docs/animated-background/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Animated background - Motion-Primitives',
   description:
-    'Visually highlights selected items by sliding a background into view when hovered over or clicked. This smooth transition helps users focus on the active item, making it ideal for interactive lists, menus, or navigations where clear selection feedback is important.',
+    'Visually highlights selected items by sliding a background into view when hovered over or clicked. This smooth transition helps users focus on the active item, making it ideal for interactive lists, menus, or navigations where clear selection feedback is important. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { AnimatedTabs } from './animated-tabs';
