--- a/app/docs/animated-group/page.mdx
+++ b/app/docs/animated-group/page.mdx
@@ -1,6 +1,6 @@
 export const metadata = {
   title: 'Animated Group - Motion-Primitives',
-  description: `A wrapper that adds animated transitions to a group of child elements. It's perfect for creating staggered animations for lists, grids, or any collection of components.`,
+  description: `A wrapper that adds animated transitions to a group of child elements. It's perfect for creating staggered animations for lists, grids, or any collection of components. Built for React, Next.js, and Tailwind CSS.`,
 };
 
 import { AnimatedGroupPreset } from './animated-group-preset';
