--- a/app/docs/animated-number/page.mdx
+++ b/app/docs/animated-number/page.mdx
@@ -1,6 +1,7 @@
 export const metadata = {
   title: 'Animated Number - Motion-Primitives',
-  description: 'Easily animate numbers.',
+  description:
+    'Easily animate numbers. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { AnimatedNumberBasic } from './animated-number-basic';
