--- a/app/docs/border-trail/page.mdx
+++ b/app/docs/border-trail/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Border Trail - Motion-Primitives',
   description:
-    'Animated border effect that moves along the edges of its parent container.',
+    'Animated border effect that moves along the edges of its parent container. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { BorderTrailCard1 } from './border-trail-card-1';
