--- a/app/docs/carousel/page.mdx
+++ b/app/docs/carousel/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Carousel - Motion-Primitives',
   description:
-    'A flexible and easy-to-use carousel with customizable navigation and indicators.',
+    'A flexible and easy-to-use carousel with customizable navigation and indicators. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { CarouselBasic } from './carousel-basic';
