--- a/app/docs/cursor/page.mdx
+++ b/app/docs/cursor/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Cursor - Motion-Primitives',
   description:
-    'A custom cursor component with optional spring animations. It can be globally applied to the page or attached specifically to a parent element.',
+    'A custom cursor component with optional spring animations. It can be globally applied to the page or attached specifically to a parent element. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { Cursor1 } from './cursor-1';
