--- a/app/docs/disclosure/page.mdx
+++ b/app/docs/disclosure/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Disclosure - Motion-Primitives',
   description:
-    'The Disclosure component allows users to toggle the visibility of content, either collapsed or expanded.',
+    'The Disclosure component allows users to toggle the visibility of content, either collapsed or expanded. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { DisclosureBasic } from './disclosure-basic';
