--- a/app/docs/dock/page.mdx
+++ b/app/docs/dock/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Dock - Motion-Primitives',
   description:
-    'A versatile UI element that provides a flexible and customizable way to organize and display menu items within your application.',
+    'A versatile UI element that provides a flexible and customizable way to organize and display menu items within your application. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { AppleStyleDock } from './apple-style-dock';
