--- a/app/docs/image-comparison/page.mdx
+++ b/app/docs/image-comparison/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Image Comparison - Motion-Primitives',
   description:
-    'Interactively compare two images with a draggable slider to reveal differences.',
+    'Interactively compare two images with a draggable slider to reveal differences. Built for React, Next.js, and Tailwind CSS.',
 };
 import { ImageComparisonBasic } from './image-comparison-basic';
 import { ImageComparisonHover } from './image-comparison-hover';
