--- a/app/docs/infinite-slider/page.mdx
+++ b/app/docs/infinite-slider/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Infinite Slider - Motion-Primitives',
   description:
-    'Infinite scrolling slider component that smoothly loops through its children. It supports both horizontal and vertical directions, with customizable speed and speed on hover. Ideal for creating continuous carousels, marquee displays, or dynamic content showcases.',
+    'Infinite scrolling slider component that smoothly loops through its children. It supports both horizontal and vertical directions, with customizable speed and speed on hover. Ideal for creating continuous carousels, marquee displays, or dynamic content showcases. Built for React, Next.js, and Tailwind CSS.',
 };
 import { InfiniteSliderBasic } from './infinite-slider-basic';
 import { InfiniteSliderHoverSpeed } from './infinite-slider-hover-speed';
