--- a/app/docs/magnetic/page.mdx
+++ b/app/docs/magnetic/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Magnetic - Motion-Primitives',
   description:
-    'A magnetic effect for elements that allows them to be attracted to the mouse cursor.',
+    'A magnetic effect for elements that allows them to be attracted to the mouse cursor. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { MagneticBasic } from './magnetic-basic';
