--- a/app/docs/morphing-dialog/page.mdx
+++ b/app/docs/morphing-dialog/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Morphing Dialog - Motion-Primitives',
   description:
-    'A dialog that uses layout animations to transition content into a focused view. It supports click-outside and escape key functionalities for closing.',
+    'A dialog that uses layout animations to transition content into a focused view. It supports click-outside and escape key functionalities for closing. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { MorphingDialogBasicOne } from './morphing-dialog-basic-1';
