--- a/app/docs/progressive-blur/page.mdx
+++ b/app/docs/progressive-blur/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Progressive blur - Motion-Primitives',
   description:
-    'A Progressive Blur component creates a layered blur effect using motion and gradient masks. It progressively blurs layers based on direction and intensity, adding visual depth.',
+    'A Progressive Blur component creates a layered blur effect using motion and gradient masks. It progressively blurs layers based on direction and intensity, adding visual depth. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { ProgressiveBlurBasic } from './progressive-blur-basic';
