--- a/app/docs/scroll-progress/page.mdx
+++ b/app/docs/scroll-progress/page.mdx
@@ -1,6 +1,7 @@
 export const metadata = {
   title: 'Scroll Progress - Motion-Primitives',
-  description: 'Animated scroll progress for your web pages.',
+  description:
+    'Animated scroll progress for your web pages. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { ScrollProgress } from '@/components/core/scroll-progress';
