--- a/app/docs/sliding-number/page.mdx
+++ b/app/docs/sliding-number/page.mdx
@@ -1,6 +1,7 @@
 export const metadata = {
   title: 'Sliding Number - Motion-Primitives',
-  description: 'A component that slides numbers.',
+  description:
+    'A component that slides numbers. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { Clock } from './clock';
