--- a/app/docs/spinning-text/page.mdx
+++ b/app/docs/spinning-text/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Spinning Text - Motion-Primitives',
   description:
-    'Easily animate text circularly. Customize the animation with variants and transitions.',
+    'Easily animate text circularly. Customize the animation with variants and transitions. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { SpinningTextBasic } from './spinning-text-basic';
