--- a/app/docs/spotlight/page.mdx
+++ b/app/docs/spotlight/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Spotlight - Motion-Primitives',
   description:
-    'A dynamic spotlight effect component that follows cursor movement.',
+    'A dynamic spotlight effect component that follows cursor movement. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { SpotlightBasic } from './spotlight-basic';
