--- a/app/docs/text-effect/page.mdx
+++ b/app/docs/text-effect/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Text Effect - Motion-Primitives',
   description:
-    'Easily animate text content with various effects. You can apply animations per character or per word, and customize the animation effects using custom variants or preset animations.',
+    'Easily animate text content with various effects. You can apply animations per character or per word, and customize the animation effects using custom variants or preset animations. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { TextEffectPerChar } from './text-effect-per-char';
