--- a/app/docs/text-loop/page.mdx
+++ b/app/docs/text-loop/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Text Loop - Motion-Primitives',
   description:
-    'Text animation that transitions between multiple items, creating an engaging looping effect.',
+    'Text animation that transitions between multiple items, creating an engaging looping effect. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { TextLoopBasic } from './text-loop-basic';
