--- a/app/docs/text-morph/page.mdx
+++ b/app/docs/text-morph/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Text Morph - Motion-Primitives',
   description:
-    'Animates text by morphing shared letters between words, creating fluid transitions.',
+    'Animates text by morphing shared letters between words, creating fluid transitions. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { TextMorphButton } from './text-morph-button';
