--- a/app/docs/text-roll/page.mdx
+++ b/app/docs/text-roll/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Text Roll - Motion-Primitives',
   description:
-    'A text roll component that rotates each character, fully customizable for nice text animations.',
+    'A text roll component that rotates each character, fully customizable for nice text animations. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { TextRollBasic } from './text-roll-basic';
