--- a/app/docs/text-scramble/page.mdx
+++ b/app/docs/text-scramble/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Text Scramble - Motion-Primitives',
   description:
-    'Text animation that transforms text by randomly cycling through characters before settling on the final content, creating an engaging cryptographic effect.',
+    'Text animation that transforms text by randomly cycling through characters before settling on the final content, creating an engaging cryptographic effect. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { TextScrambleBasic } from './text-scramble-basic';
