--- a/app/docs/text-shimmer-wave/page.mdx
+++ b/app/docs/text-shimmer-wave/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Text Shimmer Wave - Motion-Primitives',
   description:
-    'Shimmer wave effect on text. Easily adjust the wave effect, spread, duration, and more.',
+    'Shimmer wave effect on text. Easily adjust the wave effect, spread, duration, and more. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import ComponentCodePreview from '@/components/website/component-code-preview';
