--- a/app/docs/text-shimmer/page.mdx
+++ b/app/docs/text-shimmer/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Text Shimmer - Motion-Primitives',
   description:
-    'Shimmer effect on text. Easily adjust the duration and the spread of the shimmer effect.',
+    'Shimmer effect on text. Easily adjust the duration and the spread of the shimmer effect. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { TextShimmerBasic } from './text-shimmer-basic';
