--- a/app/docs/tilt/page.mdx
+++ b/app/docs/tilt/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Tilt - Motion-Primitives',
   description:
-    '3D tilt effect that responds to mouse movement, enhancing UI elements with a dynamic depth effect, customizable rotation factors and spring options.',
+    '3D tilt effect that responds to mouse movement, enhancing UI elements with a dynamic depth effect, customizable rotation factors and spring options. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { TiltCard1 } from './tilt-card-1';
