--- a/app/docs/toolbar-dynamic/page.mdx
+++ b/app/docs/toolbar-dynamic/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Toolbar Dynamic - Motion-Primitives',
   description:
-    'Adjusts width dynamically to accommodate varying tool requirements. Starts small and expands to offer more tools as needed.',
+    'Adjusts width dynamically to accommodate varying tool requirements. Starts small and expands to offer more tools as needed. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import ToolbarDynamic from '@/components/core/toolbar-dynamic';
