--- a/app/docs/toolbar-expandable/page.mdx
+++ b/app/docs/toolbar-expandable/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Toolbar Expandable - Motion-Primitives',
   description:
-    'Changes height based on content, expanding to display more tools and shrinking to save space. Keeps your screen organized and efficient.',
+    'Changes height based on content, expanding to display more tools and shrinking to save space. Keeps your screen organized and efficient. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import ToolbarExpandable from '@/components/core/toolbar-expandable';
