--- a/app/docs/transition-panel/page.mdx
+++ b/app/docs/transition-panel/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Transition Panel - Motion-Primitives',
   description:
-    "Easy way to switch between different pieces of content with enter and exit animations. It's perfect for enhancing user experience in areas such as onboarding card, settings adjustments, or any interactive content that requires a visual transition between states.",
+    "Easy way to switch between different pieces of content with enter and exit animations. It's perfect for enhancing user experience in areas such as onboarding card, settings adjustments, or any interactive content that requires a visual transition between states. Built for React, Next.js, and Tailwind CSS.",
 };
 
 import { TabsTransitionPanel } from './transition-panel-tabs';
