--- a/app/docs/dialog/page.mdx
+++ b/app/docs/dialog/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Dialog - Motion-Primitives',
   description:
-    'A window overlaid on either the primary window or another dialog window, rendering the content underneath inert. Customize the dialog with variants and transition.',
+    'A window overlaid on either the primary window or another dialog window, rendering the content underneath inert. Customize the dialog with variants and transition. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import ComponentCodePreview from '@/components/website/component-code-preview';
