--- a/app/docs/in-view/page.mdx
+++ b/app/docs/in-view/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'In view - Motion-Primitives',
   description:
-    'Easily animate elements when they come into view. You can apply animations to elements when they enter the viewport, or when they are fully visible.',
+    'Easily animate elements when they come into view. You can apply animations to elements when they enter the viewport, or when they are fully visible. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { InViewBasic } from './in-view-basic';
@@ -80,11 +80,11 @@ Images are from [cosmos - oui are one ::](https://www.cosmos.so/biancadjardins/o
 
 ## Component API
 
-| Prop        | Type                                     | Default                                               | Description                                  |
-| :---------- | :--------------------------------------- | :---------------------------------------------------- | :--------------------------------------------|
-| children    | ReactNode                                |                                                       | The content inside the `InView` component.   |
-| variants    | `{ hidden: Variant; visible: Variant; }` | `{ hidden: { opacity: 0 }, visible: { opacity: 1 } }` | Variants to define the animation states.     |
-| transition  | Transition                               |                                                       | Specifies the animation transitions.         |
-| viewOptions | UseInViewOptions                         |                                                       | Options to configure the in-view behavior.   |
-| as          | React.ElementType                        | 'div'                                                 | The HTML element to render the component as. |
-| once        | Boolean                                  | `undefined` (false)                                   | If `true`, the animation will play only once.|
+| Prop        | Type                                     | Default                                               | Description                                   |
+| :---------- | :--------------------------------------- | :---------------------------------------------------- | :-------------------------------------------- |
+| children    | ReactNode                                |                                                       | The content inside the `InView` component.    |
+| variants    | `{ hidden: Variant; visible: Variant; }` | `{ hidden: { opacity: 0 }, visible: { opacity: 1 } }` | Variants to define the animation states.      |
+| transition  | Transition                               |                                                       | Specifies the animation transitions.          |
+| viewOptions | UseInViewOptions                         |                                                       | Options to configure the in-view behavior.    |
+| as          | React.ElementType                        | 'div'                                                 | The HTML element to render the component as.  |
+| once        | Boolean                                  | `undefined` (false)                                   | If `true`, the animation will play only once. |
