--- a/app/docs/morphing-popover/page.mdx
+++ b/app/docs/morphing-popover/page.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: 'Morphing Popover - Motion-Primitives',
   description:
-    'A popover that transforms from its trigger into the content using layout animations. It visually morphs instead of appearing as a separate element.',
+    'A popover that transforms from its trigger into the content using layout animations. It visually morphs instead of appearing as a separate element. Built for React, Next.js, and Tailwind CSS.',
 };
 
 import { MorphingPopoverBasic } from './morphing-popover-basic';
